added results, added comment,

--- a/bike_sharing_kaggle.ipynb
+++ b/bike_sharing_kaggle.ipynb
@@ -4,13 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Bike sharing (Kaggle) ()\n",
+    "# Bike sharing (Kaggle) (Moritz)\n",
     "- https://www.kaggle.com/c/184702-tu-ml-ws-18-bike-sharing#_=_\n",
     "- large samples (train = 8690), small dimension (15)\n",
     "- attribute characteristics: numeric, date?\n",
     "\n",
     "## with preprocessing\n",
     "- prepocessing: scale (standardize)\n",
+    "\n",
+    "### Gradient Boosted Decision Tree\n",
+    "- with preprocessing\n",
     "- with 50 samples: \n",
     "    - 13.559 s\n",
     "    - {'max_depth': 5, 'min_samples_split': 15, 'n_estimators': 350}\n",
@@ -40,9 +43,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARN: OMP_NUM_THREADS=None =>\n",
+      "... If you are using openblas if you are using openblas set OMP_NUM_THREADS=1 or risk subprocess calls hanging indefinitely\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import sklearn as sk\n",
@@ -53,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +101,7 @@
      "output_type": "stream",
      "text": [
       "R^2 value for model: 0.38403134493881663\n",
-      "Saved as lr_2019-01-01 23:47:28.062938.csv\n"
+      "Saved as lr_2019-01-02 10:27:49.671617.csv\n"
      ]
     },
     {
@@ -120,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +140,421 @@
      "output_type": "stream",
      "text": [
       "GridSearch initializing...\n",
-      "SVR model in training...\n"
+      "SVR model in training...\n",
+      "MSE: 21350.03313, RMSE: 146.11651, C: 1.0, kernel: linear, epsilon: 0.5, gamma: auto \n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>cnt</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>13504</td>\n",
+       "      <td>239.345903</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>15714</td>\n",
+       "      <td>273.630612</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1658</td>\n",
+       "      <td>153.493340</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10461</td>\n",
+       "      <td>180.969537</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10875</td>\n",
+       "      <td>85.641983</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>14811</td>\n",
+       "      <td>121.603837</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1474</td>\n",
+       "      <td>50.083726</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>5809</td>\n",
+       "      <td>174.882963</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>4655</td>\n",
+       "      <td>267.913224</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>7707</td>\n",
+       "      <td>110.349696</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>15963</td>\n",
+       "      <td>271.838893</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>9455</td>\n",
+       "      <td>214.219419</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>13565</td>\n",
+       "      <td>258.800929</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>10330</td>\n",
+       "      <td>194.558660</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>9277</td>\n",
+       "      <td>86.027187</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>1859</td>\n",
+       "      <td>-8.299912</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>196</td>\n",
+       "      <td>44.522616</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>2817</td>\n",
+       "      <td>16.781787</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>11720</td>\n",
+       "      <td>205.001784</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>8864</td>\n",
+       "      <td>-8.687011</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>7801</td>\n",
+       "      <td>226.262150</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>13754</td>\n",
+       "      <td>142.578480</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>1692</td>\n",
+       "      <td>-71.623123</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>16019</td>\n",
+       "      <td>95.105742</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>6976</td>\n",
+       "      <td>22.098864</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>2635</td>\n",
+       "      <td>235.887284</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>6669</td>\n",
+       "      <td>121.048490</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>8306</td>\n",
+       "      <td>170.947360</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>8422</td>\n",
+       "      <td>120.070411</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>16899</td>\n",
+       "      <td>240.262080</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8659</th>\n",
+       "      <td>1072</td>\n",
+       "      <td>67.848511</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8660</th>\n",
+       "      <td>17049</td>\n",
+       "      <td>68.834291</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8661</th>\n",
+       "      <td>7872</td>\n",
+       "      <td>114.220860</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8662</th>\n",
+       "      <td>3970</td>\n",
+       "      <td>99.600724</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8663</th>\n",
+       "      <td>3926</td>\n",
+       "      <td>150.852881</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8664</th>\n",
+       "      <td>16181</td>\n",
+       "      <td>246.041277</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8665</th>\n",
+       "      <td>9879</td>\n",
+       "      <td>166.753470</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8666</th>\n",
+       "      <td>8425</td>\n",
+       "      <td>142.435609</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8667</th>\n",
+       "      <td>14466</td>\n",
+       "      <td>291.645798</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8668</th>\n",
+       "      <td>12731</td>\n",
+       "      <td>268.646428</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8669</th>\n",
+       "      <td>16243</td>\n",
+       "      <td>188.540990</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8670</th>\n",
+       "      <td>14709</td>\n",
+       "      <td>115.254703</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8671</th>\n",
+       "      <td>9155</td>\n",
+       "      <td>34.922151</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8672</th>\n",
+       "      <td>16884</td>\n",
+       "      <td>98.930795</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8673</th>\n",
+       "      <td>3081</td>\n",
+       "      <td>44.207161</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8674</th>\n",
+       "      <td>15171</td>\n",
+       "      <td>165.095893</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8675</th>\n",
+       "      <td>2736</td>\n",
+       "      <td>234.938916</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8676</th>\n",
+       "      <td>9232</td>\n",
+       "      <td>155.105382</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8677</th>\n",
+       "      <td>16706</td>\n",
+       "      <td>222.767867</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8678</th>\n",
+       "      <td>9258</td>\n",
+       "      <td>157.406078</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8679</th>\n",
+       "      <td>2695</td>\n",
+       "      <td>20.329097</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8680</th>\n",
+       "      <td>14338</td>\n",
+       "      <td>256.469412</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8681</th>\n",
+       "      <td>9290</td>\n",
+       "      <td>227.355272</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8682</th>\n",
+       "      <td>3842</td>\n",
+       "      <td>267.422309</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8683</th>\n",
+       "      <td>16563</td>\n",
+       "      <td>172.914799</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8684</th>\n",
+       "      <td>1703</td>\n",
+       "      <td>87.461227</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8685</th>\n",
+       "      <td>7557</td>\n",
+       "      <td>82.485409</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8686</th>\n",
+       "      <td>5110</td>\n",
+       "      <td>259.832168</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8687</th>\n",
+       "      <td>9380</td>\n",
+       "      <td>275.660315</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8688</th>\n",
+       "      <td>5773</td>\n",
+       "      <td>239.465523</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>8689 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         id         cnt\n",
+       "0     13504  239.345903\n",
+       "1     15714  273.630612\n",
+       "2      1658  153.493340\n",
+       "3     10461  180.969537\n",
+       "4     10875   85.641983\n",
+       "5     14811  121.603837\n",
+       "6      1474   50.083726\n",
+       "7      5809  174.882963\n",
+       "8      4655  267.913224\n",
+       "9      7707  110.349696\n",
+       "10    15963  271.838893\n",
+       "11     9455  214.219419\n",
+       "12    13565  258.800929\n",
+       "13    10330  194.558660\n",
+       "14     9277   86.027187\n",
+       "15     1859   -8.299912\n",
+       "16      196   44.522616\n",
+       "17     2817   16.781787\n",
+       "18    11720  205.001784\n",
+       "19     8864   -8.687011\n",
+       "20     7801  226.262150\n",
+       "21    13754  142.578480\n",
+       "22     1692  -71.623123\n",
+       "23    16019   95.105742\n",
+       "24     6976   22.098864\n",
+       "25     2635  235.887284\n",
+       "26     6669  121.048490\n",
+       "27     8306  170.947360\n",
+       "28     8422  120.070411\n",
+       "29    16899  240.262080\n",
+       "...     ...         ...\n",
+       "8659   1072   67.848511\n",
+       "8660  17049   68.834291\n",
+       "8661   7872  114.220860\n",
+       "8662   3970   99.600724\n",
+       "8663   3926  150.852881\n",
+       "8664  16181  246.041277\n",
+       "8665   9879  166.753470\n",
+       "8666   8425  142.435609\n",
+       "8667  14466  291.645798\n",
+       "8668  12731  268.646428\n",
+       "8669  16243  188.540990\n",
+       "8670  14709  115.254703\n",
+       "8671   9155   34.922151\n",
+       "8672  16884   98.930795\n",
+       "8673   3081   44.207161\n",
+       "8674  15171  165.095893\n",
+       "8675   2736  234.938916\n",
+       "8676   9232  155.105382\n",
+       "8677  16706  222.767867\n",
+       "8678   9258  157.406078\n",
+       "8679   2695   20.329097\n",
+       "8680  14338  256.469412\n",
+       "8681   9290  227.355272\n",
+       "8682   3842  267.422309\n",
+       "8683  16563  172.914799\n",
+       "8684   1703   87.461227\n",
+       "8685   7557   82.485409\n",
+       "8686   5110  259.832168\n",
+       "8687   9380  275.660315\n",
+       "8688   5773  239.465523\n",
+       "\n",
+       "[8689 rows x 2 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved as svr_C-1.0_k-linear_e-0.5_g-auto_2019-01-02 10:34:39.413427.csv\n"
      ]
     }
    ],
