--- a/student_performance_kaggle.ipynb
+++ b/student_performance_kaggle.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Student performance (Kaggle)\n",
+    "# Student performance (Kaggle) (Moritz)\n",
     "- https://www.kaggle.com/c/184702-tu-ml-ws-18-student-performance\n",
     "- small samples (train = 198), medium dimension (32)\n",
     "- attribute characteristics: numeric, categorical\n",
