--- a/base.ipynb
+++ b/base.ipynb
@@ -192,11 +192,19 @@
    "outputs": [],
    "source": [
     "# Linear Regression\n",
-    "def linear_reg(X_train, y_train):\n",
+    "def linear_reg(X_train, y_train, X_test, y_test):\n",
+    "    # Fit model\n",
     "    reg = LinearRegression().fit(X_train, y_train)\n",
-    "    \n",
     "    print(f'R^2 value for model: {reg.score(X_train, y_train)}')\n",
-    "\n",
+    "    print(f'Coeffiecients: {reg.coef_}')\n",
+    "    \n",
+    "    # Predict test, compute metrics\n",
+    "    pred = reg.predict(X_test)\n",
+    "    r2_score = reg.score(X_test, y_test)\n",
+    "    mse = mean_squared_error(y_test, pred)\n",
+    "    print(f'MSE: {mse}')\n",
+    "    print(f'R^2 Score: {r2_score}')\n",
+    "    \n",
     "    return reg"
    ]
   },
@@ -436,7 +444,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
