bike sharing (more or less) done

--- a/bike_sharing_kaggle.ipynb
+++ b/bike_sharing_kaggle.ipynb
@@ -12,6 +12,21 @@
     "## with preprocessing\n",
     "- prepocessing: scale (standardize)\n",
     "\n",
+    "### Linear Regression\n",
+    "- with preprocessing\n",
+    "- with all samples: \n",
+    "    - <1 s\n",
+    "    - RMSE: 140.25758\n",
+    "    - Kaggle: 143.91026\n",
+    "\n",
+    "### SVR\n",
+    "- with preprocessing\n",
+    "- with all samples: \n",
+    "    - few minutes   \n",
+    "    - C: 1.0, kernel: linear, epsilon: 0.5, gamma: auto \n",
+    "    - RMSE: 146.11651\n",
+    "    - Kaggle: 150.71520\n",
+    "\n",
     "### Gradient Boosted Decision Tree\n",
     "- with preprocessing\n",
     "- with 50 samples: \n",
@@ -43,18 +58,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARN: OMP_NUM_THREADS=None =>\n",
-      "... If you are using openblas if you are using openblas set OMP_NUM_THREADS=1 or risk subprocess calls hanging indefinitely\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import sklearn as sk\n",
@@ -65,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -101,21 +107,17 @@
      "output_type": "stream",
      "text": [
       "R^2 value for model: 0.38403134493881663\n",
-      "Saved as lr_2019-01-02 10:27:49.671617.csv\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/sklearn/linear_model/base.py:485: RuntimeWarning: internal gelsd driver lwork query error, required iwork dimension not returned. This is likely the result of LAPACK bug 0038, fixed in LAPACK 3.2.2 (released July 21, 2010). Falling back to 'gelss' driver.\n",
-      "  linalg.lstsq(X, y)\n"
+      "Predict:\n",
+      "RMSE: 140.25758\n",
+      "R^2 Score: 0.38403134493881663\n",
+      "Saved as lr_2019-01-02 11:15:53.109841.csv\n"
      ]
     }
    ],
    "source": [
     "# Linear Regression\n",
-    "reg = linear_reg(X_train, y_train)\n",
+    "# predict on X_train (to replace missing MSE in LinearRegression)\n",
+    "reg = linear_reg(X_train, y_train, X_train, y_train)\n",
     "result = pd.DataFrame(reg.predict(X_test), columns=['cnt'])\n",
     "\n",
     "# join id col\n",
@@ -132,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +556,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved as svr_C-1.0_k-linear_e-0.5_g-auto_2019-01-02 10:34:39.413427.csv\n"
+      "Saved as svr_C-1.0_k-linear_e-0.5_g-auto_2019-01-02 11:22:54.261935.csv\n"
      ]
     }
    ],
@@ -565,7 +567,7 @@
     "    'C': np.linspace(.2,1,5),\n",
     "    'kernel': ['linear'],#, 'rbf', 'sigmoid', 'poly'], # poly very slow\n",
     "    'epsilon': np.linspace(0,.5,6),\n",
-    "    'gamma': ['auto']#, 'scale']\n",
+    "    'gamma': ['auto']\n",
     "}\n",
     "\n",
     "# run grid search\n",
