--- a/base.ipynb
+++ b/base.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,6 +91,7 @@
     " \n",
     "# general sklearn/preprocessing\n",
     "from sklearn import metrics\n",
+    "from sklearn.metrics import mean_squared_error\n",
     "from sklearn.metrics import make_scorer\n",
     "from sklearn import model_selection\n",
     "from sklearn import preprocessing\n",
@@ -187,23 +188,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Linear Regression\n",
-    "def linear_reg(X_train, y_train, X_test, y_test):\n",
+    "def linear_reg(X_train, y_train, X_test=pd.DataFrame(), y_test=pd.DataFrame()):\n",
     "    # Fit model\n",
     "    reg = LinearRegression().fit(X_train, y_train)\n",
     "    print(f'R^2 value for model: {reg.score(X_train, y_train)}')\n",
-    "    print(f'Coeffiecients: {reg.coef_}')\n",
+    "    #print(f'Coeffiecients: {reg.coef_}')\n",
     "    \n",
     "    # Predict test, compute metrics\n",
-    "    pred = reg.predict(X_test)\n",
-    "    r2_score = reg.score(X_test, y_test)\n",
-    "    mse = mean_squared_error(y_test, pred)\n",
-    "    print(f'MSE: {mse}')\n",
-    "    print(f'R^2 Score: {r2_score}')\n",
+    "    if((not(X_test.empty)) & (not(y_test.empty))):\n",
+    "        print(\"Predict:\")\n",
+    "        pred = reg.predict(X_test)\n",
+    "        r2_score = reg.score(X_test, y_test)\n",
+    "        mse = round(rmse(-1*mean_squared_error(y_test, pred)), 5)\n",
+    "        print(f'RMSE: {mse}')\n",
+    "        print(f'R^2 Score: {r2_score}')\n",
     "    \n",
     "    return reg"
    ]
@@ -444,7 +447,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
