--- a/base.ipynb
+++ b/base.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,6 +91,7 @@
     " \n",
     "# general sklearn/preprocessing\n",
     "from sklearn import metrics\n",
+    "from sklearn.metrics import r2_score\n",
     "from sklearn.metrics import mean_squared_error\n",
     "from sklearn.metrics import make_scorer\n",
     "from sklearn import model_selection\n",
@@ -204,7 +205,7 @@
     "        print(\"Predict:\")\n",
     "        pred = reg.predict(X_test)\n",
     "        r2_score = reg.score(X_test, y_test)\n",
-    "        mse = round(rmse(-1*mean_squared_error(y_test, pred)), 5)\n",
+    "        mse = round(math.sqrt(mean_squared_error(y_test, pred)), 5)\n",
     "        print(f'RMSE: {mse}')\n",
     "        print(f'R^2 Score: {r2_score}')\n",
     "    \n",
@@ -213,12 +214,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Support Vector Regression \n",
-    "def run_svr(X_train, y_train, cv, param_grid):\n",
+    "def run_svr(X_train, y_train, cv, param_grid, \n",
+    "            X_test=pd.DataFrame(), y_test=pd.DataFrame()):\n",
     "    \"\"\"Run SVR\n",
     "    \n",
     "    Keyword arguments:\n",
@@ -235,12 +237,21 @@
     "    gs.fit(X_train, y_train)\n",
     "\n",
     "    print(f'''MSE: {round(-1.*gs.best_score_, 5)}, ''' \\\n",
-    "          f'''RMSE: {round(rmse(gs.best_score_), 5)}, ''' \\\n",
-    "          f'''C: {gs.best_estimator_.C}, ''' \\\n",
+    "          f'''RMSE: {round(rmse(gs.best_score_), 5)}, ''')\n",
+    "    print(f'''C: {gs.best_estimator_.C}, ''' \\\n",
     "          f'''kernel: {gs.best_estimator_.kernel}, ''' \\\n",
     "          f'''epsilon: {gs.best_estimator_.epsilon}, ''' \\\n",
     "          f'''gamma: {gs.best_estimator_.gamma} ''')\n",
     "    \n",
+    "    # Predict test, compute metrics\n",
+    "    if((not(X_test.empty)) & (not(y_test.empty))):\n",
+    "        print(\"Predict:\")\n",
+    "        pred = gs.predict(X_test)\n",
+    "        mse = round(math.sqrt(mean_squared_error(y_test, pred)), 5)\n",
+    "        r2 = round(r2_score(y_test, pred), 5)\n",
+    "        print(f'RMSE: {mse}')\n",
+    "        print(f'R^2 Score: {r2}')\n",
+    "\n",
     "    return gs"
    ]
   },
@@ -342,7 +353,8 @@
    "source": [
     "# AutoML\n",
     "\n",
-    "def run_autoML(train_data, train_target, test_data, test_target, preprocessing_ = {None}, classifier_ = {None}):\n",
+    "def run_autoML(train_data, train_target, test_data, test_target, \n",
+    "               preprocessing_ = {None}, classifier_ = {None}):\n",
     "    # define set of classifier\n",
     "    if classifier_ == {None}:\n",
     "        #classifier_ = hp.choice('clf',[GradientBoostingRegressor(learning_rate = 0.01, loss = 'ls')])\n",
