worked on gradient boosted

--- a/base.ipynb
+++ b/base.ipynb
@@ -50,7 +50,7 @@
     "- Forest fires (Anna)\n",
     "    - https://archive.ics.uci.edu/ml/datasets/Forest+Fires\n",
     "    - medium samples (513), small dimension (13) \n",
-    "    - attribute characteristics: numeric\n",
+    "    - attribute characteristics: numeric, categorical\n",
     "    \n",
     "## Steps\n",
     "- Imports for all Datasets\n",
@@ -71,9 +71,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/annanau/anaconda3/lib/python3.7/site-packages/sklearn/ensemble/weight_boosting.py:29: DeprecationWarning: numpy.core.umath_tests is an internal NumPy module and should not be imported. It will be removed in a future NumPy release.\n",
+      "  from numpy.core.umath_tests import inner1d\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARN: OMP_NUM_THREADS=None =>\n",
+      "... If you are using openblas if you are using openblas set OMP_NUM_THREADS=1 or risk subprocess calls hanging indefinitely\n"
+     ]
+    }
+   ],
    "source": [
     "# Modules\n",
     "\n",
