added rounding to lr r^2, added results,

--- a/base.ipynb
+++ b/base.ipynb
@@ -214,17 +214,17 @@
     "def linear_reg(X_train, y_train, X_test=pd.DataFrame(), y_test=pd.DataFrame()):\n",
     "    # Fit model\n",
     "    reg = LinearRegression().fit(X_train, y_train)\n",
-    "    print(f'R^2 value for model: {reg.score(X_train, y_train)}')\n",
+    "    print(f'R^2 value for model: {round(reg.score(X_train, y_train), 5)}')\n",
     "    #print(f'Coeffiecients: {reg.coef_}')\n",
     "    \n",
     "    # Predict test, compute metrics\n",
     "    if((not(X_test.empty)) & (not(y_test.empty))):\n",
     "        print(\"Predict:\")\n",
     "        pred = reg.predict(X_test)\n",
-    "        r2_score = reg.score(X_test, y_test)\n",
+    "        r2 = round(reg.score(X_test, y_test), 5)\n",
     "        mse = round(math.sqrt(mean_squared_error(y_test, pred)), 5)\n",
     "        print(f'RMSE: {mse}')\n",
-    "        print(f'R^2 Score: {r2_score}')\n",
+    "        print(f'R^2 Score: {r2}')\n",
     "    \n",
     "    return reg"
    ]
