tried adding automl, but failed

--- a/base.ipynb
+++ b/base.ipynb
@@ -404,7 +404,16 @@
     "    print(\"Best classifier selected and fitted in %.3f s\\n\" % estim_fit)\n",
     "    \n",
     "    print(\"Scoring: \" + estim.score(test_data, test_target))\n",
-    "    print(\"Best selected model: \" + estim.best_model())"
+    "    print(\"Best selected model: \" + estim.best_model())\n",
+    "    \n",
+    "def automl2(X_train, y_train, X_test, y_test):\n",
+    "    print('Init AutoML')\n",
+    "    est = HyperoptEstimator()\n",
+    "    print('Fit AutoML')\n",
+    "    est.fit(X_train, y_train)\n",
+    "    model = est.best_model()\n",
+    "    print(f'AutoML score: {est.score(X_test, y_test)}')\n",
+    "    return est"
    ]
   },
   {
