--- a/base.ipynb
+++ b/base.ipynb
@@ -364,11 +364,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# AutoML\n",
+    "\n",
+    "# Make sure training_frame, X_test, y_test are H2OFrame dataframes \n",
+    "def run_autoML2(y, training_frame, X_test, y_test):\n",
+    "\n",
+    "    # Run AutoML for 20 base models (limited to 1 hour max runtime by default)\n",
+    "    aml = H2OAutoML(max_models=30, max_runtime_secs=300, seed=1)\n",
+    "    aml.train(y=y, training_frame=training_frame)\n",
+    "    \n",
+    "    # View the AutoML Leaderboard\n",
+    "    display('AutoML Leaderboard')\n",
+    "    lb = aml.leaderboard\n",
+    "    print(lb.head(rows=lb.nrows)) # Print all rows instead of default (10 rows)\n",
+    "    \n",
+    "    # Predict test set\n",
+    "    preds = aml.predict(X_test)\n",
+    "    preds_array = preds.as_data_frame().as_matrix() # First convert preds to a pandas df, then to a numpy array\n",
+    "    rmse = round(math.sqrt(mean_squared_error(y_test, preds_array)), 5)\n",
+    "    r2 = round(r2_score(y_test, preds_array), 5)\n",
+    "    print(f'RMSE: {rmse}')\n",
+    "    print(f'R^2 Score: {r2}')\n",
+    "    \n",
+    "    return aml\n",
     "\n",
     "def run_autoML(train_data, train_target, test_data, test_target, \n",
     "               preprocessing_ = {None}, classifier_ = {None}):\n",
@@ -405,6 +427,7 @@
     "    \n",
     "    print(\"Scoring: \" + estim.score(test_data, test_target))\n",
     "    print(\"Best selected model: \" + estim.best_model())\n",
+    "    \n",
     "    \n",
     "def automl2(X_train, y_train, X_test, y_test):\n",
     "    print('Init AutoML')\n",
@@ -460,13 +483,6 @@
     "    fig.colorbar(cax, ticks=[-1, -.75, -.5, -.25, 0, .25, .5, .75, 1])\n",
     "    plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -485,7 +501,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
