--- a/base.ipynb
+++ b/base.ipynb
@@ -35,7 +35,7 @@
     "\n",
     "\n",
     "## Datasets\n",
-    "- Bike sharing (Kaggle) ()\n",
+    "- Bike sharing (Kaggle) (Moritz)\n",
     "    - https://www.kaggle.com/c/184702-tu-ml-ws-18-bike-sharing#_=_\n",
     "    - large samples (train = 8690), small dimension (15)\n",
     "    - attribute characteristics: numeric, date?\n",
@@ -71,17 +71,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/annanau/anaconda3/lib/python3.7/site-packages/sklearn/ensemble/weight_boosting.py:29: DeprecationWarning: numpy.core.umath_tests is an internal NumPy module and should not be imported. It will be removed in a future NumPy release.\n",
-      "  from numpy.core.umath_tests import inner1d\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -130,6 +122,8 @@
     "from hpsklearn import HyperoptEstimator, svr_linear, gradient_boosting_regression, pca, normalizer, standard_scaler\n",
     "from hyperopt import hp\n",
     "from hyperopt import anneal, rand, tpe, mix\n",
+    "import h2o\n",
+    "from h2o.automl import H2OAutoML\n",
     "\n",
     "# allows to output plots in the notebook\n",
     "%matplotlib inline"
@@ -428,15 +422,29 @@
     "    print(\"Scoring: \" + estim.score(test_data, test_target))\n",
     "    print(\"Best selected model: \" + estim.best_model())\n",
     "    \n",
+    "def run_autoML_moritz(train, y_name, X_test, y_test, max_models=30, max_runtime=600):\n",
+    "    h2o.init()\n",
+    "        \n",
+    "    train_h2o = h2o.H2OFrame(train)\n",
+    "    X_test_h2o = h2o.H2OFrame(X_test)\n",
+    "        \n",
+    "    # Run AutoML for 30 base models (limited to 1 hour max runtime by default)\n",
+    "    aml = H2OAutoML(max_models=max_models, max_runtime_secs=max_runtime, seed=1)\n",
+    "    aml.train(y=y_name, training_frame=train_h2o)\n",
     "    \n",
-    "def automl2(X_train, y_train, X_test, y_test):\n",
-    "    print('Init AutoML')\n",
-    "    est = HyperoptEstimator()\n",
-    "    print('Fit AutoML')\n",
-    "    est.fit(X_train, y_train)\n",
-    "    model = est.best_model()\n",
-    "    print(f'AutoML score: {est.score(X_test, y_test)}')\n",
-    "    return est"
+    "    # View the AutoML Leaderboard\n",
+    "    display('AUTOML Leaderboard')\n",
+    "    lb = aml.leaderboard\n",
+    "    display(lb) # Print all rows instead of default (10 rows)\n",
+    "    \n",
+    "    # Predict test set\n",
+    "    #pred = aml.predict(X_test_h2o).as_data_frame()\n",
+    "    #rmse = round(math.sqrt(mean_squared_error(y_test, pred)), 5)\n",
+    "    #r2 = round(r2_score(y_test, pred), 5)\n",
+    "    #print(f'RMSE: {rmse}')\n",
+    "    #print(f'R^2 Score: {r2}')\n",
+    "    \n",
+    "    return aml"
    ]
   },
   {
@@ -501,7 +509,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
