base: added timing to LR, SVR, autoML, bike: exec, added results student: set params

--- a/base.ipynb
+++ b/base.ipynb
@@ -207,7 +207,11 @@
     "# Linear Regression\n",
     "def linear_reg(X_train, y_train, X_test=pd.DataFrame(), y_test=pd.DataFrame()):\n",
     "    # Fit model\n",
+    "    \n",
+    "    t0 = time.time()\n",
     "    reg = LinearRegression().fit(X_train, y_train)\n",
+    "    print(f'Linear Regression fitting performed in {time.time() - t0} s.')\n",
+    "\n",
     "    print(f'R^2 value for model: {round(reg.score(X_train, y_train), 5)}')\n",
     "    #print(f'Coeffiecients: {reg.coef_}')\n",
     "    \n",
@@ -244,8 +248,10 @@
     "                      scoring=['r2', 'neg_mean_absolute_error', 'neg_mean_squared_error'], \n",
     "                      refit='neg_mean_squared_error')\n",
     "    \n",
-    "    print(\"SVR model in training...\")\n",
+    "    t0 = time.time()\n",
+    "    print(\"Fitting...\")\n",
     "    gs.fit(X_train, y_train)\n",
+    "    print(f'SVR fitting performed in {time.time() - t0} s.')\n",
     "\n",
     "    print(f'''MSE: {round(-1.*gs.best_score_, 5)}, ''' \\\n",
     "          f'''RMSE: {round(rmse(gs.best_score_), 5)}, ''')\n",
@@ -430,10 +436,13 @@
     "        \n",
     "    # Run AutoML for 30 base models (limited to 1 hour max runtime by default)\n",
     "    aml = H2OAutoML(max_models=max_models, max_runtime_secs=max_runtime, seed=1)\n",
-    "    aml.train(y=y_name, training_frame=train_h2o)\n",
     "    \n",
+    "    t0 = time.time()\n",
+    "    aml.train(y=y_name, training_frame=train_h2o)\n",
+    "    print(f'AutoML training performed in {time.time() - t0} s.')\n",
+    "\n",
     "    # View the AutoML Leaderboard\n",
-    "    display('AUTOML Leaderboard')\n",
+    "    display('AutoML Leaderboard')\n",
     "    lb = aml.leaderboard\n",
     "    display(lb) # Print all rows instead of default (10 rows)\n",
     "    \n",
